# cargo-suicide

./: Cargo.toml  README.md
src/: main.rs
